--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.13",
     "@popperjs/core": "^2.11.8",
+    "@rails/ujs": "^7.1.3-4",
     "autoprefixer": "^10.4.21",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
